[tool.poetry]
name = "mason-tools"
version = "0.1.0"
description = ""
authors = ["Bruno FS Ciconelle <fsouza.bruno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flakeheaven = "^3.0.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
